RESOLVED FIXED216077
REGRESSION (r241734): [iOS] Changing the value of a select element and tapping on another results in two changes
https://bugs.webkit.org/show_bug.cgi?id=216077
Summary REGRESSION (r241734): [iOS] Changing the value of a select element and tappin...
kenny
Reported 2020-09-02 09:00:27 PDT
How to reproduce: The code is here: https://codesandbox.io/s/recursing-antonelli-ihcrc?file=/index.html You can go to https://ihcrc.csb.app/ from Safari on an iOS 13 device or simulator. 1. Press on the first select element. This should open up the native select option wheel. 2. Scroll to option 'B' (do NOT press 'Done', leave the wheel open) 3. Press on the second select element. 4. Notice that it is has selected option '2', and if you open the console you will notice two logs from both select's onchange event.
Attachments
Patch (7.21 KB, patch)
2020-09-03 11:42 PDT, Aditya Keerthi
no flags
kenny
Comment 1 2020-09-02 09:22:06 PDT
Forgot to mention: This does NOT happen on ios 12, so it seems to be something that was introduced in 13.
Radar WebKit Bug Importer
Comment 2 2020-09-02 12:26:11 PDT
Aditya Keerthi
Comment 3 2020-09-03 11:42:16 PDT
EWS
Comment 4 2020-09-04 08:44:13 PDT
Committed r266610: <https://trac.webkit.org/changeset/266610> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407903 [details].
Note You need to log in before you can comment on or make changes to this bug.