Source/WebKit/UIProcess/ios/forms/WKFormPeripheralBase.mm
@@ -48,12 +48,18 @@
 
 - (void)beginEditing
 {
+    if (_editing)
+        return;
+
     _editing = YES;
     [_control controlBeginEditing];
 }
 
 - (void)endEditing
 {
+    if (!_editing)
+        return;
+
     _editing = NO;
     [_control controlEndEditing];
 }
